fixed divider and spacing on invites

--- a/geoff-stef/css/main.css
+++ b/geoff-stef/css/main.css
@@ -57,10 +57,6 @@ body {
 	transition: opacity 1s ease;
 }
 
-section {
-	padding-bottom: 30px;
-}
-
 .container:last-of-type {
 	margin-bottom: 50px;
 }
@@ -214,7 +210,7 @@ hr {
 	mix-blend-mode: soft-light;
 	height: 20px;
 	opacity: initial;
-	margin: 30px 0 15px;
+	margin: 30px 0;
 }
 
 .img-wrapper {
